checker ensures annotation is put on right types